--- a/src/sass/theme/_theme_variables.scss
+++ b/src/sass/theme/_theme_variables.scss
@@ -2,6 +2,6 @@
 // To overwrite a Bootstrap variable you don´t have to touch the Bootstrap folder.
 // Just copy a variable from src/sass/bootstrap4/_variables.scss, paste it here and edit the value.
 
-
-$purple: #5533ff; // Thats a sample how you could change a BootStrap variable.
-$primary: $purple;  // Once we've changed the value, we'll also make it the primary brand color.
+$primary: #071427;  // Once we've changed the value, we'll also make it the primary brand color.
+$light-blue: #e5f1fa;
+$dark-gray: #424242;
