better update layout

--- a/css/theme.css
+++ b/css/theme.css
@@ -17497,6 +17497,15 @@ h2:target, .h2:target, h3:target, .h3:target, h4:target, .h4:target, ol:target, 
   padding-left: 0;
 }
 
+.update {
+  padding: 20px;
+  margin: 10px 0;
+}
+
+.update:nth-child(even) {
+  background-color: #e5f1fa;
+}
+
 @media (max-width: 768px) {
   #right-sidebar {
     padding-left: 10px;
