--- a/css/theme.css
+++ b/css/theme.css
@@ -17209,6 +17209,12 @@ h2:target, .h2:target, h3:target, .h3:target, h4:target, .h4:target, ol:target, 
     background-color: #fff;
   }
 }
+.data-block {
+  padding: 30px 0;
+  margin: 30px 0;
+  background-color: #e5f1fa;
+}
+
 .important, .note, .warning {
   margin: 20px 0;
   font-size: 1.3rem;
