--- a/css/theme.css
+++ b/css/theme.css
@@ -17344,6 +17344,10 @@ h2:target, .h2:target, h3:target, .h3:target, h4:target, .h4:target, ol:target, 
   animation-timing-function: ease-in-out;
 }
 
+.cost, .renewal {
+  font-size: 1.5rem;
+}
+
 #search-wrapper h1, #search-wrapper .h1 {
   margin: 60px 0;
 }
