--- a/src/sass/theme/_theme.scss
+++ b/src/sass/theme/_theme.scss
@@ -274,6 +274,10 @@ h2:target, h3:target, h4:target, ol:target, ul:target, div:target {
     animation-timing-function: ease-in-out;
 }
 
+.cost, .renewal {
+	font-size: 1.5rem;
+}
+
 #search-wrapper h1 {
 	margin: 60px 0;
 }
